# Build-an-Event-Driven-System-with-FastAPI-and-React

./: consumers.py  main.py  package-lock.json  pyproject.toml
react-events/: package-lock.json
react-events/public/: index.html
react-events/src/: App.js
src/repository/redis/: models.py
src/schemas/: deliveries.py
