[tool.poetry]
name = "build-an-event-driven-system-with-fastapi-and-react"
version = "0.1.0"
description = ""
authors = ["VICTOR HUGO <victor.oliveira@willbank.com.br>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.79.0"
redis-om = "^0.0.27"
uvicorn = "^0.18.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
